--- a/index.html
+++ b/index.html
@@ -3,6 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Ride the line and keep passengers comfortable in TrainSim." />
+    <meta name="theme-color" content="#0b1622" />
+    <link rel="canonical" href="https://trainsim-3d.vercel.app/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="TrainSim" />
+    <meta property="og:url" content="https://trainsim-3d.vercel.app/" />
+    <meta property="og:title" content="TrainSim" />
+    <meta property="og:description" content="Ride the line and keep passengers comfortable in TrainSim." />
+    <meta property="og:image" content="https://trainsim-3d.vercel.app/og-1200x630.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="TrainSim" />
+    <meta name="twitter:description" content="Ride the line and keep passengers comfortable in TrainSim." />
+    <meta name="twitter:image" content="https://trainsim-3d.vercel.app/og-1200x630.jpg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
     <title>TrainSim</title>
   </head>
   <body>
