--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover"
+    />
     <meta name="description" content="Ride the line and keep passengers comfortable in TrainSim." />
     <meta name="theme-color" content="#0b1622" />
     <link rel="canonical" href="https://trainsim-3d.vercel.app/" />
