Update domain name

--- a/index.html
+++ b/index.html
@@ -8,26 +8,28 @@
     />
     <meta
       name="description"
-      content="Ride the line and keep passengers comfortable in TrainSim."
+      content="TrainSim is a realistic 3D train driving simulator. Drive a train, maintain passenger comfort, and stop safely at the terminal station. Play for free in your browser."
     />
+    <meta name="keywords" content="train simulator, 3D train game, browser game, realistic train driving, train sim, WebGL game" />
+    <meta name="author" content="TrainSim" />
     <meta name="theme-color" content="#0b1622" />
-    <link rel="canonical" href="https://trainsim-3d.vercel.app/" />
+    <link rel="canonical" href="https://trainsim.io/" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="TrainSim" />
-    <meta property="og:url" content="https://trainsim-3d.vercel.app/" />
-    <meta property="og:title" content="TrainSim" />
+    <meta property="og:url" content="https://trainsim.io/" />
+    <meta property="og:title" content="TrainSim - 3D Train Driving Simulator" />
     <meta
       property="og:description"
-      content="Ride the line and keep passengers comfortable in TrainSim."
+      content="TrainSim is a realistic 3D train driving simulator. Drive a train, maintain passenger comfort, and stop safely at the terminal station. Play for free in your browser."
     />
     <meta property="og:image" content="/og-1200x630.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="TrainSim" />
+    <meta name="twitter:title" content="TrainSim - 3D Train Driving Simulator" />
     <meta
       name="twitter:description"
-      content="Ride the line and keep passengers comfortable in TrainSim."
+      content="TrainSim is a realistic 3D train driving simulator. Drive a train, maintain passenger comfort, and stop safely at the terminal station. Play for free in your browser."
     />
     <meta name="twitter:image" content="/og-1200x630.jpg" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
